--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
               </p>
               <div class="services-div">
                 <a
-                  href="#"
+                  id="service-btn"
+                  onclick="ScrolltoSection()"
                   role="button"
                   class="btn btn-primary services-btn btn-effect"
                 >
@@ -124,7 +125,7 @@
           </div>
         </div>
       </section>
-      <section class="services-sect">
+      <section id="services-sect" class="services-sect">
         <div class="auto-container">
           <div class="service-heading">
             <h2 class="services-heading-text">Our Services</h2>
@@ -192,9 +193,7 @@
               </div>
             </div>
           </div>
-          <div class="owl-dots">
-
-          </div>
+          <div class="owl-dots"></div>
         </div>
       </section>
     </div>
