--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css" />
-    <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -102,7 +114,6 @@
               <div class="services-div">
                 <a
                   id="service-btn"
-                  onclick="ScrolltoSection()"
                   role="button"
                   class="btn btn-primary services-btn btn-effect"
                 >
@@ -130,9 +141,10 @@
           <div class="service-heading">
             <h2 class="services-heading-text">Our Services</h2>
           </div>
-          <div class="owl-carousel owl-theme">
-            <div class="services-card">
-              <div class="cards">
+
+          <div class="services-card">
+            <div class="owl-carousel owl-theme">
+              <div class="cards item">
                 <div class="card-upper">
                   <div class="flat-icon">
                     <i class="fa-solid fa-laptop-code"></i>
@@ -152,7 +164,7 @@
                   ></a>
                 </div>
               </div>
-              <div class="cards">
+              <div class="cards item">
                 <div class="card-upper">
                   <div class="flat-icon">
                     <i class="fa-solid fa-robot"></i>
@@ -171,7 +183,66 @@
                   ></a>
                 </div>
               </div>
-              <div class="cards">
+              <div class="cards item">
+                <div class="card-upper">
+                  <div class="flat-icon">
+                    <i class="fa-solid fa-screwdriver-wrench"></i>
+                  </div>
+                  <h4 class="card-heading">
+                    <a href="#">Advisory</a>
+                  </h4>
+                  <p class="text-card">
+                    Having a right advices from experts and services makes your
+                    firm topper, we provide many marketing services which needed
+                    to your bussiness growth.
+                  </p>
+                </div>
+                <div class="card-lower">
+                  <a href="#"
+                    >Learn More <i class="fa-solid fa-arrow-right-long"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="cards item">
+                <div class="card-upper">
+                  <div class="flat-icon">
+                    <i class="fa-solid fa-laptop-code"></i>
+                  </div>
+                  <h4 class="card-heading">
+                    <a href="#">Software Development</a>
+                  </h4>
+                  <p class="text-card">
+                    Industry specific custom Software development solution for
+                    business enchancement and good will maintainance for
+                    customer satisfaction.
+                  </p>
+                </div>
+                <div class="card-lower">
+                  <a href="#"
+                    >Learn More <i class="fa-solid fa-arrow-right-long"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="cards item">
+                <div class="card-upper">
+                  <div class="flat-icon">
+                    <i class="fa-solid fa-robot"></i>
+                  </div>
+                  <h4 class="card-heading">
+                    <a href="#">Advanced Tech</a>
+                  </h4>
+                  <p class="text-card">
+                    Our advanced technology features Artificial Intelligence and
+                    other main technology solutions for industry 4.0.
+                  </p>
+                </div>
+                <div class="card-lower">
+                  <a href="#"
+                    >Learn More <i class="fa-solid fa-arrow-right-long"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="cards item">
                 <div class="card-upper">
                   <div class="flat-icon">
                     <i class="fa-solid fa-screwdriver-wrench"></i>
@@ -193,7 +264,6 @@
               </div>
             </div>
           </div>
-          <div class="owl-dots"></div>
         </div>
       </section>
     </div>
@@ -214,31 +284,38 @@
       </ul>
     </div>
 
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+      integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <!-- Owl Carousel JavaScript and jQuery -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="jquery.min.js"></script>
     <script src="owl.carousel.min.js"></script>
-    <script>
-      $(document).ready(function () {
-        $(".owl-carousel").owlCarousel({
-          items: 3, // Adjust the number of visible items per slide
-          loop: true, // Enable loop
-          margin: 20, // Adjust the margin between items
-          autoplay: true, // Enable autoplay
-          autoplayTimeout: 3000, // Autoplay interval in milliseconds
-          responsiveClass: true,
-          responsive: {
-            0: {
-              items: 1,
-            },
-            768: {
-              items: 2,
-            },
-            1200: {
-              items: 3,
-            },
-          },
-        });
-      });
+    <script type="text/JavaScript">
+            $('.owl-carousel').owlCarousel({
+          loop:true,
+          margin:10,
+          nav:true,
+          responsive:{
+              0:{
+                  items:1
+              },
+              600:{
+                  items:2
+              },
+              1000:{
+                  items:3
+              }
+          }
+      })
     </script>
     <script src="/js/app.js"></script>
   </body>
