completed about us section with responsiveness

--- a/index.html
+++ b/index.html
@@ -138,10 +138,6 @@
       </section>
       <section id="services-sect" class="services-sect">
         <div class="auto-container">
-          <div class="service-heading">
-            <h2 class="services-heading-text">Our Services</h2>
-          </div>
-
           <div class="services-card">
             <div class="owl-carousel owl-theme">
               <div class="cards item">
@@ -260,6 +256,39 @@
                   <a href="#"
                     >Learn More <i class="fa-solid fa-arrow-right-long"></i
                   ></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="aboutus-sect" id="aboutus-sect">
+        <div class="fixed-img">
+          <img src="/assets/bg/pattern-2.png" alt="">
+        </div>
+        <div class="auto-container">
+          <div class="aboutus-row">
+            <div class="aboutus-col">
+              <div class="img-contain">
+                <img src="/assets/details-1.png" alt="" />
+              </div>
+            </div>
+            <div class="aboutus-col">
+              <div class="txt-contain">
+                <h1 class="about-heading"><i class="fa-solid fa-users"></i>ABOUT US</h1>
+                <h2>Who we are.....?</h2>
+                <p>
+                  We mainly focus on Artificial intelligence (AI) is
+                  wide-ranging branch of computer science concerned with
+                  building smart machines capable of performing tasks that
+                  typically require human intelligence. AI is an
+                  interdisciplinary science with multiple approaches, but
+                  advancements in machine learning and deep learning are
+                  creating a paradigm shift in virtually every sector of the
+                  tech industry.
+                </p>
+                <div class="aboutus-btn">
+                  <a href="#">Get Quote</a>
                 </div>
               </div>
             </div>
