--- a/index.html
+++ b/index.html
@@ -66,10 +66,32 @@
                 <li class="dropdown">
                   <a href="#" class="main-a">Services</a>
                   <ul class="services-list">
-                    <li><a href="#">Software Development</a></li>
-                    <li><a href="#">Advanced Tech</a></li>
-                    <li><a href="#">Maintenance and Support</a></li>
-                    <li><a href="#">Advisory</a></li>
+                    <li>
+                      <a href="#"
+                        ><span class="icon-span">⮚</span
+                        ><span class="text-span">Software Development</span></a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><span class="icon-span">⮚</span
+                        ><span class="text-span">Advanced Tech</span></a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><span class="icon-span">⮚</span
+                        ><span class="text-span"
+                          >Maintenance and Support</span
+                        ></a
+                      >
+                    </li>
+                    <li>
+                      <a href="#"
+                        ><span class="icon-span">⮚</span
+                        ><span class="text-span">Advisory</span></a
+                      >
+                    </li>
                   </ul>
                 </li>
                 <li><a href="#" class=".main-a">Technologies</a></li>
@@ -264,7 +286,7 @@
       </section>
       <section class="aboutus-sect" id="aboutus-sect">
         <div class="fixed-img">
-          <img src="/assets/bg/pattern-2.png" alt="">
+          <img src="/assets/bg/pattern-2.png" alt="" />
         </div>
         <div class="auto-container">
           <div class="aboutus-row">
@@ -275,7 +297,9 @@
             </div>
             <div class="aboutus-col">
               <div class="txt-contain">
-                <h1 class="about-heading"><i class="fa-solid fa-users"></i>ABOUT US</h1>
+                <h1 class="about-heading">
+                  <i class="fa-solid fa-users"></i>ABOUT US
+                </h1>
                 <h2>Who we are.....?</h2>
                 <p>
                   We mainly focus on Artificial intelligence (AI) is
