ad fuctions to home, services and about in sidebar

--- a/index.html
+++ b/index.html
@@ -329,10 +329,10 @@
       </div>
       <ul class="sidebar-menu">
         <li><img src="/assets/header-logo.png" alt="" /></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Services</a></li>
+        <li><a id="home-sidebar" href="#">Home</a></li>
+        <li><a id="Service-sidebar" href="#">Services</a></li>
         <li><a href="#">Technologies</a></li>
-        <li><a href="#">About</a></li>
+        <li><a id="About-us-sidebar" href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </div>
