added gallery page and team members

--- a/index.html
+++ b/index.html
@@ -119,12 +119,14 @@
         <div class="auto-container">
           <div class="home-row">
             <div class="home-col text-container">
-              <h1 class="h1-large">
+              <h1 class="h1-large fade-in">
                 SciPy <br class="br-tag" />
                 Technologies
               </h1>
-              <h5 class="home-card-title">Make Your Move Mark Your Success</h5>
-              <p class="p-large">
+              <h5 class="home-card-title fade-in">
+                Make Your Move Mark Your Success
+              </h5>
+              <p class="p-large fade-in">
                 SciPy Technologies is a Thiruvananthapuram based company
                 offering unique solutions and a variety of services in the field
                 of Artificial intelligence. Our family is setting the industry
@@ -133,7 +135,7 @@
                 smart solutions for any size of project. Contact us to request a
                 demo or meet a member of our team.
               </p>
-              <div class="services-div">
+              <div class="services-div fade-in">
                 <a
                   id="service-btn"
                   role="button"
@@ -319,6 +321,160 @@
           </div>
         </div>
       </section>
+      <section class="gallery-page">
+        <div class="auto-container">
+          <div class="gallery-title">
+            <h3 class="sec-title-gallery">
+              <i class="fa-brands fa-envira"></i>OUR GALLERY
+            </h3>
+            <h2 class="gallery-title-head">SciPy Tech Gallery</h2>
+            <div class="sec-title-seperator">
+              <div class="blue-item"></div>
+            </div>
+          </div>
+        </div>
+        <div class="outer-container">
+          <div class="owl-carousel owl-theme">
+            <div class="gal-card item">
+              <div class="top-hover-div">
+                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <div class="gradient-text">
+                  <p>Security, Design</p>
+                  <h2>Software Application</h2>
+                </div>
+              </div>
+            </div>
+            <div class="gal-card item">
+              <div class="top-hover-div">
+                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <div class="gradient-text">
+                  <p>Security, Design</p>
+                  <h2>Software Application</h2>
+                </div>
+              </div>
+            </div>
+            <div class="gal-card item">
+              <div class="top-hover-div">
+                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <div class="gradient-text">
+                  <p>Security, Design</p>
+                  <h2>Software Application</h2>
+                </div>
+              </div>
+            </div>
+            <div class="gal-card item">
+              <div class="top-hover-div">
+                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <div class="gradient-text">
+                  <p>Security, Design</p>
+                  <h2>Software Application</h2>
+                </div>
+              </div>
+            </div>
+            <div class="gal-card item">
+              <div class="top-hover-div">
+                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <div class="gradient-text">
+                  <p>Security, Design</p>
+                  <h2>Software Application</h2>
+                </div>
+              </div>
+            </div>
+            <div class="gal-card item">
+              <div class="top-hover-div">
+                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <div class="gradient-text">
+                  <p>Security, Design</p>
+                  <h2>Software Application</h2>
+                </div>
+              </div>
+            </div>
+            <div class="gal-card item">
+              <div class="top-hover-div">
+                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <div class="gradient-text">
+                  <p>Security, Design</p>
+                  <h2>Software Application</h2>
+                </div>
+              </div>
+            </div>
+            <div class="gal-card item">
+              <div class="top-hover-div">
+                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <div class="gradient-text">
+                  <p>Security, Design</p>
+                  <h2>Software Application</h2>
+                </div>
+              </div>
+            </div>
+            <div class="gal-card item">
+              <div class="top-hover-div">
+                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <div class="gradient-text">
+                  <p>Security, Design</p>
+                  <h2>Software Application</h2>
+                </div>
+              </div>
+            </div>
+            <div class="gal-card item">
+              <div class="top-hover-div">
+                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <div class="gradient-text">
+                  <p>Security, Design</p>
+                  <h2>Software Application</h2>
+                </div>
+              </div>
+            </div>
+            <div class="gal-card item">
+              <div class="top-hover-div">
+                <img class="gal-img" src="/assets/gallery/1.jpg" alt="" />
+                <div class="gradient-text">
+                  <p>Security, Design</p>
+                  <h2>Software Application</h2>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="team-members">
+        <div class="auto-container">
+          <div class="gallery-title">
+            <h3 class="sec-title-gallery">
+              <i class="fa-solid fa-user-group"></i>OUR TEAM
+            </h3>
+            <h2 class="gallery-title-head">Team Member</h2>
+            <div class="sec-title-seperator">
+              <div class="blue-item"></div>
+            </div>
+          </div>
+          <div class="team-members-gallery">
+            <div class="team-row">
+              <div class="team-col">
+                <img src="/assets/teams/nithya.jpeg" alt="">
+                <div class="team-content">
+                  <a href="#" class="member-name">Nithya Rajendran</a>
+                  <p class="member-position">Software Developer</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <img src="/assets/teams/chinju.jpg" alt="">
+                <div class="team-content">
+                  <a href="#" class="member-name">Chinju</a>
+                  <p class="member-position">System Engineer</p>
+                </div>
+              </div>
+              <div class="team-col">
+                <img src="/assets/teams/vargees.jpg" alt="">
+                <div class="team-content">
+                  <a href="#" class="member-name">Varghese</a>
+                  <p class="member-position">Software Developer</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <!-- Side bar menu for mobile and tablet views only -->
@@ -365,7 +521,7 @@
                   items:2
               },
               1000:{
-                  items:3
+                  items:4
               }
           }
       })
