added team hover effects and socials

--- a/index.html
+++ b/index.html
@@ -206,6 +206,24 @@
               <div class="cards item">
                 <div class="card-upper">
                   <div class="flat-icon">
+                    <i class="fa-solid fa-robot"></i>
+                  </div>
+                  <h4 class="card-heading">
+                    <a href="#">Maintenance & Support</a>
+                  </h4>
+                  <p class="text-card">
+                    Our Maintenance & Support offer top quality well organised adaptive support.
+                  </p>
+                </div>
+                <div class="card-lower">
+                  <a href="#"
+                    >Learn More <i class="fa-solid fa-arrow-right-long"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="cards item">
+                <div class="card-upper">
+                  <div class="flat-icon">
                     <i class="fa-solid fa-screwdriver-wrench"></i>
                   </div>
                   <h4 class="card-heading">
@@ -254,6 +272,24 @@
                   <p class="text-card">
                     Our advanced technology features Artificial Intelligence and
                     other main technology solutions for industry 4.0.
+                  </p>
+                </div>
+                <div class="card-lower">
+                  <a href="#"
+                    >Learn More <i class="fa-solid fa-arrow-right-long"></i
+                  ></a>
+                </div>
+              </div>
+              <div class="cards item">
+                <div class="card-upper">
+                  <div class="flat-icon">
+                    <i class="fa-solid fa-robot"></i>
+                  </div>
+                  <h4 class="card-heading">
+                    <a href="#">Maintenance & Support</a>
+                  </h4>
+                  <p class="text-card">
+                    Our Maintenance & Support offer top quality well organised adaptive support.
                   </p>
                 </div>
                 <div class="card-lower">
@@ -451,23 +487,47 @@
           <div class="team-members-gallery">
             <div class="team-row">
               <div class="team-col">
-                <img src="/assets/teams/nithya.jpeg" alt="">
+                <div class="team-image-div">
+                  <img class="team-img" src="/assets/teams/nithya.jpeg" alt="">
+                  <div class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
                 <div class="team-content">
-                  <a href="#" class="member-name">Nithya Rajendran</a>
+                  <h4><a href="#" class="member-name">Nithya Rajendran</a></h4>
                   <p class="member-position">Software Developer</p>
                 </div>
               </div>
               <div class="team-col">
-                <img src="/assets/teams/chinju.jpg" alt="">
+                <div class="team-image-div">
+                  <img class="team-img" src="/assets/teams/chinju.jpg" alt="">
+                  <div class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
                 <div class="team-content">
-                  <a href="#" class="member-name">Chinju</a>
+                  <h4><a href="#" class="member-name">Chinju</a></h4>
                   <p class="member-position">System Engineer</p>
                 </div>
               </div>
               <div class="team-col">
-                <img src="/assets/teams/vargees.jpg" alt="">
+                <div class="team-image-div">
+                  <img class="team-img" src="/assets/teams/vargees.jpg" alt="">
+                  <div class="hover-social-menu d-flex justify-content-around align-items-baseline mt-3">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin"></i>
+                    <i class="fa-brands fa-github"></i>
+                  </div>
+                </div>
                 <div class="team-content">
-                  <a href="#" class="member-name">Varghese</a>
+                  <h4><a href="#" class="member-name">Varghese</a></h4>
                   <p class="member-position">Software Developer</p>
                 </div>
               </div>
