--- a/index.html
+++ b/index.html
@@ -551,6 +551,62 @@
           </div>
         </div>
       </section>
+      <footer class="footer-main">
+        <div class="auto-container">
+          <div class="main-footer-widgets">
+            <div class="footer-col">
+              <h5 class="footer-title">Subscribe Us</h5>
+              <div class="footer-text">
+                Join us to our Newsletter and releases submit.
+              </div>
+              <div class="form-group">
+                <input type="email" placeholder="Enter your email!" required />
+                <button type="submit" class="submit-newsletter">
+                  <i class="fa-solid fa-arrow-right email-arrow"></i>
+                </button>
+              </div>
+              <div class="footer-privacy">
+                Our  <span class="blue-footer">Privacy Policy</span> and provide consent to receive <br> updates from our company.
+              </div>
+            </div>
+            <div class="footer-col">
+              <div class="footer-widget-links">
+                <h4 class="footer-title">Service Links</h4>
+                <ul class="main-footer-list">
+                  <li><a href="#">Software Development</a></li>
+                  <li><a href="#">Advanced Tech</a></li>
+                  <li><a href="#">Maintenance and Support</a></li>
+                  <li><a href="#">Advisory</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer-col">
+              <div class="footer-widget-links">
+                <h4 class="footer-title">Quick links</h4>
+                <ul class="main-footer-list">
+                  <li><a href="#">Home</a></li>
+                  <li><a href="#">Services</a></li>
+                  <li><a href="#">Technologies</a></li>
+                  <li><a href="#">About Us</a></li>
+                  <li><a href="#">Contact Us</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer-col">
+              <div class="footer-widget-links-2">
+                <h4 class="footer-title">Lateset News</h4>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="copyright-foot">
+          <div class="auto-container">
+            <div class="footer-copyright-text">
+              <span class="blue-footer">SciPy Technologies  </span>  © Copyright-2023 All Rights Reserved.
+            </div>
+        </div>
+          </div>
+      </footer>
     </div>
 
     <!-- Side bar menu for mobile and tablet views only -->
