added contact section and some improvements

--- a/index.html
+++ b/index.html
@@ -551,6 +551,60 @@
           </div>
         </div>
       </section>
+      <section id="contact-sect" class="contact-sect">
+        <div class="auto-container">
+          <div class="gallery-title">
+            <h3 class="sec-title-gallery">
+              <i class="fa-solid fa-headset"></i>CONTACT US</h3>
+              <h2 class="gallery-title-head">How to reach us</h2>
+            <div class="sec-title-seperator">
+              <div class="blue-item"></div>
+            </div>
+          </div>
+          <div class="contact-row">
+            <div class="contact-col">
+              <div class="inner-info">
+                <span class="contact-phone-icon"
+                ><i class="fa-solid fa-phone-volume"></i
+              ></span>
+              <div class="contact-detail">
+                <a href="#" class="phone">+91 9048245318</a>
+                <a href="#" class="phone">+91 8921229471</a>
+              </div>
+              <div class="contact-text">Contact Phone</div>
+              </div>
+            </div>
+            <div class="contact-col">
+              <div class="inner-info">
+                <span class="contact-phone-icon">
+                  <i class="fa-solid fa-envelope-open-text"></i>
+                </span>
+                <div class="contact-detail">
+                  <a href="#" class="contact-email">scipytechnologies@gmail.com</a>
+                  <a href="#" class="contact-email">info@scipytechnologies.com</a>
+                </div>
+                <div class="contact-text">Contact Email</div>
+              </div>
+            </div>
+            <div class="contact-col">
+              <div class="inner-info">
+                <span class="contact-phone-icon"
+                ><i class="fa-solid fa-map-location-dot"></i>
+              </span>
+              <div class="contact-detail">
+                <a href="#" class="location">
+                  Near Jubilee Hospital,<br> Palayam Trivandrum</a
+                >
+              </div>
+              <div class="contact-text">Contact Location</div>
+              </div>
+            </div>
+          </div>
+          <div class="company-loaction">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3945.9799481199398!2d76.94919077573755!3d8.501327297023996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bbb4d95185af%3A0x15f1640b53f2c59d!2sSciPy%20Technologies!5e0!3m2!1sen!2sin!4v1694704732756!5m2!1sen!2sin" width="1920" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+      </section>
       <footer class="footer-main">
         <div class="auto-container">
           <div class="main-footer-widgets">
@@ -566,7 +620,9 @@
                 </button>
               </div>
               <div class="footer-privacy">
-                Our  <span class="blue-footer">Privacy Policy</span> and provide consent to receive <br> updates from our company.
+                Our <span class="blue-footer">Privacy Policy</span> and provide
+                consent to receive <br />
+                updates from our company.
               </div>
             </div>
             <div class="footer-col">
@@ -602,10 +658,11 @@
         <div class="copyright-foot">
           <div class="auto-container">
             <div class="footer-copyright-text">
-              <span class="blue-footer">SciPy Technologies  </span>  © Copyright-2023 All Rights Reserved.
+              <span class="blue-footer">SciPy Technologies </span> ©
+              Copyright-2023 All Rights Reserved.
             </div>
-        </div>
           </div>
+        </div>
       </footer>
     </div>
 
@@ -621,7 +678,7 @@
         <li><a id="Service-sidebar" href="#">Services</a></li>
         <li><a href="#">Technologies</a></li>
         <li><a id="About-us-sidebar" href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a id="contact-sidebar" href="#">Contact</a></li>
       </ul>
     </div>
 
@@ -660,9 +717,12 @@
               600:{
                   items:2
               },
-              1000:{
-                  items:4
-              }
+              900:{
+                items: 3
+              },
+              1200:{
+                items:4
+              },
           }
       })
     </script>
