fixed header and homepage background

--- a/index.html
+++ b/index.html
@@ -46,76 +46,77 @@
   <body>
     <div class="content">
       <!-- header section  -->
-      <header id="header" class="navigation-menu">
-        <div class="auto-container">
-          <nav class="nav-bar">
-            <div class="logo">
-              <img src="/assets/header-logo.png" alt="" />
-            </div>
-            <div class="menu-list">
-              <ul style="margin: 0">
-                <li>
-                  <a
-                    id="home"
-                    class="active-link home-color .main-a"
-                    style="color: #0092ff"
-                    href="#home-page"
-                    ><span>Home</span></a
-                  >
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="main-a">Services</a>
-                  <ul class="services-list">
-                    <li>
-                      <a href="#"
-                        ><span class="icon-span">⤥</span
-                        ><span class="text-span">Software Development</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="#"
-                        ><span class="icon-span">⤥</span
-                        ><span class="text-span">Advanced Tech</span></a
-                      >
-                    </li>
-                    <li>
-                      <a href="#"
-                        ><span class="icon-span">⤥</span
-                        ><span class="text-span"
-                          >Maintenance and Support</span
-                        ></a
-                      >
-                    </li>
-                    <li>
-                      <a href="#"
-                        ><span class="icon-span">⤥</span
-                        ><span class="text-span">Advisory</span></a
-                      >
-                    </li>
-                  </ul>
-                </li>
-                <li><a href="#" class=".main-a">Technologies</a></li>
-                <li>
-                  <a id="About-us" class="active-link" href="#">About Us</a>
-                </li>
-                <li>
-                  <a id="Contact-us" class="active-link" href="#">Contact Us</a>
-                </li>
-              </ul>
-            </div>
-            <div class="quote-btn">
-              <a class="btn btn-outline-primary btn-effect" href="#"
-                >Get Quote</a
-              >
-              <div class="sidemenu-btn">
-                <span></span>
-                <span></span>
-              </div>
-            </div>
-          </nav>
-        </div>
-      </header>
+      
       <section id="home-page" class="home-page">
+        <header id="header" class="navigation-menu">
+          <div class="auto-container">
+            <nav class="nav-bar">
+              <div class="logo">
+                <img src="/assets/header-logo.png" alt="" />
+              </div>
+              <div class="menu-list">
+                <ul style="margin: 0">
+                  <li>
+                    <a
+                      id="home"
+                      class="active-link home-color .main-a"
+                      style="color: #0092ff"
+                      href="#home-page"
+                      ><span>Home</span></a
+                    >
+                  </li>
+                  <li class="dropdown">
+                    <a href="#" class="main-a">Services</a>
+                    <ul class="services-list">
+                      <li>
+                        <a href="#"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Software Development</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Advanced Tech</span></a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span"
+                            >Maintenance and Support</span
+                          ></a
+                        >
+                      </li>
+                      <li>
+                        <a href="#"
+                          ><span class="icon-span">⤥</span
+                          ><span class="text-span">Advisory</span></a
+                        >
+                      </li>
+                    </ul>
+                  </li>
+                  <li><a href="#" class=".main-a">Technologies</a></li>
+                  <li>
+                    <a id="About-us" class="active-link" href="#">About Us</a>
+                  </li>
+                  <li>
+                    <a id="Contact-us" class="active-link" href="#">Contact Us</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="quote-btn">
+                <a class="btn btn-outline-primary btn-effect" href="#"
+                  >Get Quote</a
+                >
+                <div class="sidemenu-btn">
+                  <span></span>
+                  <span></span>
+                </div>
+              </div>
+            </nav>
+          </div>
+        </header>
         <div class="auto-container">
           <div class="home-row">
             <div class="home-col text-container">
@@ -352,7 +353,7 @@
                   tech industry.
                 </p>
                 <div class="aboutus-btn">
-                  <a href="#">Get Quote</a>
+                  <a href="#">About Us</a>
                 </div>
               </div>
             </div>
